--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,57 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-	<!-- Icons Font Awesome and Devicon-->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-	<!-- <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css"> -->
-
-	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
-
-	<!-- Google Font -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-
-	<title>Sean Lee - Portfolio</title>
-</head>
-<body>
-
-<!-- Title -->
-<div class="jumbotron" id="titleContent">
-	<h1 class="title">Sean Lee</h1>
-</div>
-
-<!-- Side Navbar -->
-<div class="d-none d-md-block sidenav">
-  <a href="#aboutContent">About</a>
-  <a href="#portfolioContent">Portfolio</a>
-  <a href="#courseContent">Courses</a>
-  <a href="#skillContent">Skills</a>
-  <a href="#contactContent">Contact</a>
-</div>
-
-<!-- Navbar -->
-<nav class="navbar navbar-expand-md fixed-top navbar-light bg-light d-md-none">
-  <a class="navbar-brand" href="#">Sean Lee</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarMenu">
-		<div class="navbar-nav">
-		  <a class="nav-item nav-link" href="#aboutContent">About</a>
-		  <a class="nav-item nav-link" href="#portfolioContent">Portfolio</a>
-		  <a class="nav-item nav-link" href="#courseContent">Coursework</a>
-		  <a class="nav-item nav-link" href="#skillContent">Skills</a>
-		  <a class="nav-item nav-link" href="#contactContent">Contact</a>
-		</div>
-  </div>
-</nav>
+<%- include('partials/header') -%>
 
 <!-- About me -->
 <div id="aboutContent" class="container text-center">
@@ -78,47 +25,17 @@
 		<!-- Career History -->
 		<h2>Career History</h2>
 		<hr>
-		<div class="row">
-			<div class="col-lg-5">
-				<h3>Middle Tennessee State University</h3>
-				<p>Sep 2019 - Present</p>
-			</div>
-			<div class="col-lg-7">
-				<p class="font-weight-bold">Computer Science Tutor</p>
-				<p class="d-sm-block pb-3 pb-md-0">As a Computer Science Tutor, I assist students to develop their programming skills and understand the concepts of data structure and algorithms. Either Python or C++ is the main language.</p>
-			</div>
-		</div>
 
-		<div class="row">
+		<!-- experiences.js contains Vue component -->
+		<div class="row" v-for="exp in experiences" :key="exp.id">
 			<div class="col-lg-5">
-				<h3>United States Army National Guard</h3>
-				<p>Dec 2017 - Dec 2018</p>
+				<h3>{{ exp.employer }}</h3>
+				<p>{{ exp.date }}</p>
 			</div>
-			<div class="col-lg-7">
-				<p class="font-weight-bold">Automated Logistics Team Leader</p>
-				<p class="d-sm-block pb-3 pb-md-0">After getting discharged from Army Active Duty, I joined the National Guard to fulfill the rest of 8 years fulfillment in Tennessee. I conducted monthly inspection on military vehicles and analyzed the warehouse transactions by using Systems, Application and Producs (SAP) program.</p>
-			</div>
-		</div>
 
-		<div class="row">
-			<div class="col-lg-5">
-				<h3>United States Army</h3>
-				<p>Aug 2014 - Nov 2017</p>
-			</div>
 			<div class="col-lg-7">
-				<p class="font-weight-bold">Automated Logistics Team Leader</p>
-				<p class="d-sm-block pb-3 pb-md-0">I was stationed in South Korea for a year as a team leader. My role was to turn in used repair parts, which the customers brought to my department, to the designated place. Then, I moved to Texas for two years as the team leader. I lead 10 material handling clerks to specifically work on the maintenance of the new repair parts such as vehicle parts and weapon parts.</p> 
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-lg-5">
-				<h3>United States Army</h3>
-				<p>Apr 2011 - Jul 2014</p>
-			</div>
-			<div class="col-lg-7">
-				<p class="font-weight-bold">Material Handling Clerk</p>
-				<p class="d-sm-block pb-3 pb-md-0">My first job was a material handling clerk in Kentucky. I played a vital role to keep the accuracy of 95% on maintaining the parts. Also, I turned in an enormous excess parts to the designated place. While deploying to Afghanistan for 9 months, I conducted a sling load operation to transport army supplies to smaller stations.<p>
+			<p class="font-weight-bold">{{ exp.title }}</p>
+			<p class="d-sm-block pb-3 pb-md-0">{{ exp.description }}</p>
 			</div>
 		</div>
 
@@ -144,34 +61,8 @@
 <!-- Coursework -->
 <div id="courseContent" class="container">
 	<h1 class="text-center">Coursework</h1>
-	<div class="row">
-		<div class="col-xl-6 pb-5 pr-md-4">
-			<h2 class="text-center">Completed Courses</h1>
-			<hr>
-			<ul>
-				<li>Computer Science I - Python</li>
-				<li>Computer Science II - C++</li>
-				<li>Discrete Structures</li>
-				<li>Algorithms & Data Structures</li>
-				<li>Assembly & Computer Organization</li>
-				<li>Intro to Computer Systems</li>
-				<li>Theory of Programming Languages</li>
-				<li>Database Management Systems</li>
-				<li>Compiler Design & Software Development</li>
-				<li>Ethics in Computing & Technology</li>
-				<li>Computer Languages: Java</li>
-			</ul>
-		</div>
-		<div class="col-xl-6 pb-5 pl-md-4">
-			<h2 class="text-center">Current Courses</h1>
-			<hr>
-			<ul>
-				<li>Web Technologies</li>
-				<li>Software Engineering</li>
-				<li>Elements of Linear Algebra</li>
-			</ul>
-		</div>
-	</div>
+		<!-- courses.js contains Vue component -->
+		<courses></courses>
 </div>
 
 <!-- Technical skills -->
@@ -220,13 +111,4 @@
 	</div>
 </div>
 
-<!-- Required for Bootstrap navbar collapse button -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-<!-- Custom js -->
-<script src="js/portfolio.js"></script>
-
-</body>
-</html>
+<%- include('partials/footer') -%>
