--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,6 +41,7 @@
 		  <a class="nav-item nav-link" href="#aboutContent">About</a>
 		  <a class="nav-item nav-link" href="#portfolioContent">Portfolio</a>
 		  <a class="nav-item nav-link" href="#courseContent">Coursework</a>
+      <a class="nav-item nav-link" href="#projectContent">Projects</a>
 		  <a class="nav-item nav-link" href="#skillContent">Skills</a>
 		  <a class="nav-item nav-link" href="#contactContent">Contact</a>
 		</div>
@@ -52,6 +53,7 @@
   <a href="#aboutContent">About</a>
   <a href="#portfolioContent">Portfolio</a>
   <a href="#courseContent">Courses</a>
+  <a href="#projectContent">Projects</a>
   <a href="#skillContent">Skills</a>
   <a href="#contactContent">Contact</a>
 </div>
