--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,13 +5,13 @@
 	<h1>About me</h1>
  	<div class="row">
 		<div class="col-lg-6">
-			<img class="mt-0 mb-5 mt-lg-5" src="images/profile.jpg" height="250px" width="200px" data-toggle="tooltip" data-placement="top" title="Sean Lee">
+			<img class="mt-0 mb-5 mt-lg-4" src="images/profile.jpg" height="250px" width="200px" data-toggle="tooltip" data-placement="top" title="Sean Lee">
 		</div>
 		<div class="col-lg-6 text-md-left">
 			<hr>
-			<p>I am a Computer Science student at Middle Tennessee State University who enjoys programming and problem-solving. I am also a veteran and a CS tutor for students who need help with programming concepts or detecting errors on their projects. Currently, I'm actively looking for an opportunity to work as a Software Engineer near Franklin, Brentwood, Nashville, or Murfreesboro in Tennessee.</p>
+			<p>I am a recent graduate from Middle Tennessee State University with B.S. in Computer Science degree. Seeking Entry-Level Software Engineer/Developer position to contribute my experiences and skills including C++, Java, HTML, CSS, JS, Node.js, MSSQL, and MySQL.</p>
 			<br>
-			<p>Short term goal: Software Engineer.</p>
+			<p>Short term goal: Entry Level Software Engineer.</p>
 			<p>Long term goal: Senior Software Engineer.</p>
 			<hr>				
 		</div>
@@ -47,11 +47,11 @@
 		<div class="row text-sm-left">
 			<div class="col-lg-5">
 				<h3>Computer Science</h3>
-				<p>Jan 2018 - Present</p>
+				<p>Jan 2018 - May 2020</p>
 			</div>
 			<div class="col-lg-7">
 				<p class="font-weight-bold">Middle Tennessee State University</p>
-				<p class="d-sm-block">I have learned many technical languages such as C++, Python, C, Ruby, Java, Assembly, and DBMS. I also learned the important concepts such as Object Oriented Programming, data structures, Big O notation, and algorithms. Now, I am in the process of learning web technologies and software engineering.</p>
+				<p class="d-sm-block">I have learned many technical languages such as C++, Python, C, Ruby, Java, Assembly, and DBMS. I also learned the important concepts such as Object Oriented Programming, data structures, Big O notation, and algorithms.</p>
 			</div>
 		</div>
 
@@ -64,12 +64,31 @@
 		<!-- courses.js contains Vue component -->
 		<courses></courses>
 </div>
+<!-- Projects -->
+<div id="projectContent" class="container-fluid">
+	<div class="container text-left">
+		<h1 class="text-center">Projects</h1>
+      <div class="row justify-content-center">
+         <div class="col-lg-8 project text-center">
+         	<a href="https://raidertrade.herokuapp.com" data-toggle="tooltip" data-placement="top"
+         		data-html="true" title="<b>Click for demo!</b>">
+					<img class="img-fluid" src="../images/project1.png">
+					<div class="description">
+						<h2>RaiderTrade</h2>
+						<p>RaiderTrade is a marketplace website to buy and sell textbooks among students to save money.</p>
+						<p>RaiderTrade is developed in Java with Spring Boot, Apache Maven, RESTful API, MVC Architecture, JPA, JSP, and MySQL</p>
+					</div>
+            </a>
+         </div>
+      </div>	<!-- row -->
+	</div>
+</div>
 
 <!-- Technical skills -->
 <div id="skillContent" class="container-fluid">
 	<div class="container text-center">
 		<h1>Technical Skills</h1>	
-	  <div class="row">
+	   <div class="row">
 			<div class="col-xl-3 col-lg-6 pb-5">
 				<h2>FRONT END</h2>
 				<hr>
@@ -103,9 +122,9 @@
 					<a href="https://www.linkedin.com/in/myung-w-sean-lee-b44725140">
 						<i class="fab fa-linkedin fa-5x"></i>
 					</a>	
-<!-- 					<a href="https://github.com/MyungLee1992">
+					<a href="https://github.com/MyungLee1992">
 						<i class="fab fa-github-square fa-5x"></i>
-					</a>	 -->
+					</a>	
 			</div>
 		</div>
 	</div>
