--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,14 +10,18 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 <!-- Icons Font Awesome and Devicon-->
+<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-<!-- <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css"> -->
+
 
 <!-- Custom CSS -->
 <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 
 <!-- Google Font -->
 <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
+<!-- Animate On Scroll Library (AOS) -->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 <title>Sean Lee - Portfolio</title>
 
@@ -27,7 +31,10 @@
 
 <!-- Title -->
 <div class="jumbotron" id="titleContent">
-	<h1 class="title">Sean Lee</h1>
+  <div class="center">
+	  <h1 class="title">Sean Lee</h1>
+  </div>
+  <a href="#aboutContent"><i class="scroll-down fas fa-chevron-down"></i></a>
 </div>
 
 <!-- Navbar -->
