--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,8 +5,8 @@
 	<div data-aos="fade-up">
 		<h1>About me</h1>
 		<div class="row">
-			<div class="col-lg-6">
-				<img class="mt-0 mb-5 mt-lg-4" src="images/profile.jpg" height="250px" width="200px" data-toggle="tooltip" data-placement="top" title="Sean Lee">
+			<div class="col-lg-6 mb-5 my-lg-auto">
+				<img class="" src="images/profile.jpg" height="250px" width="200px" data-toggle="tooltip" data-placement="top" title="Sean Lee">
 			</div>
 			<div class="col-lg-6 text-md-left">
 				<hr>
@@ -77,9 +77,9 @@
          <div class="col-lg-12 text-center">
          	<a class="d-block project" href="https://raidertrade.herokuapp.com" data-toggle="tooltip" data-placement="top"
          		data-html="true" title="<b>Click for demo!</b>">
-					<img class="img-fluid" src="../images/project1.png" />
+					<img class="project-img" src="../images/project1.png" />
 					<div class="description">
-						<h2>RaiderTrade</h2>
+						<p>RaiderTrade</p>
 						<p>RaiderTrade is a marketplace website to buy and sell textbooks among students to save money.</p>
 						<p>RaiderTrade is developed in Java with Spring Boot, Apache Maven, RESTful API, MVC Architecture, JPA, JSP, and MySQL</p>
 					</div>
@@ -129,7 +129,9 @@
 
 <!-- Contact me -->
 <div id="contactContent" class="container-fluid">
-	<a href="#titleContent"><i class="scroll-up fas fa-chevron-up"></i></a>
+	<a href="#titleContent" class="d-none d-md-block">
+		<i class="scroll-up fas fa-chevron-up" data-toggle="tooltip" data-placement="left" title="Go to Top"></i>
+	</a>
 	<div class="container text-center" data-aos="fade-up">
 		<h1 class="text-center">Contact Me</h1>
 		<div class="row">
