--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -35,7 +35,6 @@ a:hover {
 	text-decoration: none;
 }
 
-
 hr {
 	margin-bottom: 15px;
 	border-color: #626D71;
@@ -46,7 +45,7 @@ hr {
 .sidenav {
   position: sticky;
   float: right;
-  top: 17%;
+  top: 13%;
   overflow-x: hidden;
   text-align: center;
   background: transparent;
@@ -86,26 +85,10 @@ hr {
 .current { background-color: #eee; }
 .row { margin-top: 5%; }
 .container { 
-	padding: 100px 100px; 
-	width: 80%;
-	max-width: 100%;
-}
-
-@media screen and (max-width: 768px) {
-	.container {
-		padding: 100px 0;
-		margin: auto;
-		width: 90%;
-	}
-}
-
-.container-fluid { margin: 0; padding: 0; }
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  max-width: 100%;
-  transform: translateZ(1000px);
+	padding: 50px 0;
+	margin: auto;
+	width: 90%;
+	max-width: 600px;
 }
 
 .fab {
@@ -120,31 +103,75 @@ hr {
 	font-size: 20px;
 }
 
-.img-fluid {
+.project-img {
 	opacity: 1;
 	transition: 1s ease;
- 	height: 400px;
- 	width: 700px;
+ 	height: 250px;
+ 	width: 400px;
 }
 
 .description {
 	transition: .5s ease;
 	opacity: 0;
-	height: 300px;
- 	width: 550px;
-	position: absolute;
-	left: 50%;
-	margin-left: -270px;
-	top: 50%;
-	margin-top: -140px;
+	height: 150px;
+ 	width: 250px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%); 
 	text-align: center;
 	background-color: #ec8b5e;
 	color: white;
-	font-size: 16px;
-	padding: 16px 32px;
+	font-size: 0.5em;
+	padding: 32px 20px;
 }
 
-.project:hover .img-fluid {
+.description p {
+	margin-bottom: 10px;
+}
+
+
+@media screen and (min-width: 850px) {
+	.container { max-width: 450px; }
+	.project-img {
+		height: 300px;
+		width: 450px;
+	}
+	.description {
+		height: 200px;
+		width: 300px;
+		font-size: 0.6em;
+	}
+}
+
+@media screen and (min-width: 992px) {
+	.container { max-width: 600px; }
+	.project-img {
+		height: 350px;
+		width: 600px;
+	}
+	.description {
+		height: 250px;
+		width: 450px;
+		font-size: 0.9em;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.container { max-width: 800px; }
+	.project-img {
+		height: 450px;
+		width: 800px;
+	}
+	.description {
+		height: 350px;
+		width: 650px;
+		font-size: 1.3em;
+	}
+}
+
+.project:hover .project-img{
 	opacity: 0.3;
 }
 
@@ -156,9 +183,8 @@ hr {
   font-size: 50px;
   color: #ec8b5e;
   animation: scrolling 1s infinite;
-  width: 100%;
   position: absolute;
-  bottom: 30px;
+  bottom: 60px;
   right: 70px;
   margin: auto;
   display: block;
@@ -167,10 +193,9 @@ hr {
 .scroll-up {
   font-size: 50px;
   color: #ec8b5e;
-  width: 100%;
   animation: scrolling 1s infinite;
   position: absolute;
-  bottom: 80px;
+  bottom: 90px;
   right: 67px;
   margin: auto;
   display: block;
@@ -190,6 +215,8 @@ hr {
 }
 
 
+
+
 /* #ec8b5e light orange */
 /* #626D71 Slate */
 /* #CDCDC0 Ceramic */
@@ -202,6 +229,14 @@ hr {
 /* #763626; brown*/
 
 
+#aboutContent,
+#portfolioContent,
+#courseContent,
+#skillContent,
+#projectContent,
+#contactContent {
+	min-height: 750px;
+}
 
 #titleContent {
 	height: 100vh;
@@ -222,7 +257,7 @@ hr {
 #titleContent h1 {
 	margin-top: 300px;
 	font-weight: bold;
-	font-size: 9rem;  
+	font-size: 9vw;  
 	color: white;
 }
 
@@ -248,7 +283,6 @@ hr {
 
 #projectContent {
 	background-color: #e6d8d8;
-	min-height: 750px;
 }
 
 #skillContent p {
@@ -257,7 +291,6 @@ hr {
 
 #contactContent {
 	background-color: #cfe0e8;
-	min-height: 750px;
 	overflow: hidden;
 }
 
