--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,7 +34,7 @@
   <div class="center">
 	  <h1 class="title">Sean Lee</h1>
   </div>
-  <a href="#aboutContent"><i class="scroll-down fas fa-chevron-down"></i></a>
+  <a href="#aboutContent" class="d-none d-md-block"><i class="scroll-down fas fa-chevron-down"></i></a>
 </div>
 
 <!-- Navbar -->
