--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,7 +40,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light d-md-none">
   <a class="navbar-brand" href="#">Sean Lee</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" 
+          aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarMenu">
