mobile view updated

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -79,7 +79,7 @@
          		data-html="true" title="<b>Click for demo!</b>">
 					<img class="project-img" src="../images/project1.png" />
 					<div class="description">
-						<p>RaiderTrade</p>
+						<p><b><u>RaiderTrade</u></b></p>
 						<p>RaiderTrade is a marketplace website to buy and sell textbooks among students to save money.</p>
 						<p>RaiderTrade is developed in Java with Spring Boot, Apache Maven, RESTful API, MVC Architecture, JPA, JSP, and MySQL</p>
 					</div>
