title text modified

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -49,9 +49,9 @@
 </nav>
 
 <!-- Title -->
-<div class="jumbotron" id="titleContent">
+<div class="container-fluid" id="titleContent">
   <div class="center">
-	  <h1 class="title">Sean Lee</h1>
+	  <h1>Sean Lee</h1>
   </div>
   <a href="#aboutContent" class="d-none d-md-block"><i class="scroll-down fas fa-chevron-down"></i></a>
 </div>
