--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -136,7 +136,7 @@
 		<h1 class="text-center">Contact Me</h1>
 		<div class="row">
 			<div class="col-lg-12">
-					<a href="https://www.linkedin.com/in/myung-w-sean-lee-b44725140"
+					<a href="https://www.linkedin.com/in/myung-w-sean-lee"
 						data-toggle="tooltip" data-placement="bottom" title="Linkedin">
 						<i class="fab fa-linkedin fa-5x"></i>
 					</a>
