added current job status

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -10,9 +10,9 @@
 			</div>
 			<div class="col-lg-6 text-md-left">
 				<hr>
-				<p>I am a recent graduate from Middle Tennessee State University with B.S. in Computer Science degree. Seeking Entry-Level Software Engineer/Developer position to contribute my experiences and skills including C++, Java, HTML, CSS, JS, Node.js, MSSQL, and MySQL.</p>
+				<p>I am a Software Engineer at Trusted Solutions. I have a Bachelor's Degree in Computer Science from Middle Tennessee State University. Seeking an Associate Software Engineer position to contribute my experiences and skills including C++, Java, HTML, CSS, JavaScript, Node.js, MSSQL, and MySQL.</p>
 				<br>
-				<p>Short term goal: Entry Level Software Engineer.</p>
+				<p>Short term goal: Associate Software Engineer.</p>
 				<p>Long term goal: Senior Software Engineer.</p>
 				<hr>				
 			</div>
